[package]
name = "jeff"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/rdalton5/jeff"
repository = "https://github.com/rdalton5/jeff"
authors = ["Rob Dalton <rdalton5@kent.edu>"]
description = "Jeff - A simple delay effect VST plugin"

[lib]
name = "jeff"
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
